--- a/example/nodejs/express/public/index.html
+++ b/example/nodejs/express/public/index.html
@@ -5,7 +5,7 @@
 
 <body>
 <h1>Trying out Express</h1>
-<p>Hover on the image and it should move around.</p>
+<p>Click on the image and it should move around.</p>
 <img id="image" src="img/mos.jpg">
 <script src="js/move.js"></script>
 </body>
